syntax = "proto3";
package post;

message PostType {
  int32 posterId = 1;
  string postId = 2;
  string postText = 3;
}

message CreatePostRequest {
  int32 userId = 1;
  string postText = 2;
}

message CreatePostResponse {
  string postId = 1;
  string body = 2;
}

message GetPostFeedRequest {
  int32 userId = 1;
}

message GetPostFeedResponse {
  repeated PostType posts = 1;
  string body = 2;
}

message LikePostRequest {
  int32 userId = 1;
  string postId = 2;
}

message LikePostResponse {
  string body = 1;
}

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc GetPostFeed(GetPostFeedRequest) returns (GetPostFeedResponse) {}
  rpc LikePost(LikePostRequest) returns (LikePostResponse) {}
}